# tauri-libp2p-chat

./: README.md  package.json  tsconfig.json  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: libp2p_plugin.rs  main.rs
src-tauri/src/libp2p_plugin/: behaviour.rs  mod.rs  transport.rs
